Nesting components in React

--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script type="text/jsx">
-        // Select the div element with 'app' id
         const app = document.getElementById('app');
-        ReactDOM.render(<h1>Develop. Preview. Ship. 🚀</h1>, app);
+
+        function HomePage() {
+            return (
+                <div>
+                    {/* Nesting the Header component */}
+                    <Header />
+                </div>
+            );
+        }
+
+        ReactDOM.render(<HomePage />, app)
     </script>
 </body>
 </html>
