--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
     <script type="text/jsx">
         const app = document.getElementById('app');
 
+        function Header({ title }) {
+            return <h1>{title ? title : 'Default title'}</h1>;
+        }
+
         function HomePage() {
             return (
                 <div>
-                    {/* Nesting the Header component */}
-                    <Header />
+                    <Header title="React 💙" />
+                    <Header title="A new title" />
                 </div>
             );
         }
