--- a/index.html
+++ b/index.html
@@ -21,10 +21,15 @@
         }
 
         function HomePage() {
+            const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
             return (
                 <div>
-                    <Header title="React 💙" />
-                    <Header title="A new title" />
+                <Header title="Develop. Preview. Ship. 🚀" />
+                    <ul>
+                        {names.map((name) => (
+                            <li key={name}>{name}</li>
+                        ))}
+                    </ul>
                 </div>
             );
         }
