--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
             return <h1>{title ? title : 'Default title'}</h1>;
         }
 
+
         function HomePage() {
             const names = ['Ada Lovelace', 'Grace Hopper', 'Margaret Hamilton'];
+            const [likes, setLikes] = React.useState(0);
+
+            function handleClick() {
+                setLikes(likes + 1);
+            }
+
             return (
                 <div>
                 <Header title="Develop. Preview. Ship. 🚀" />
@@ -30,6 +37,8 @@
                             <li key={name}>{name}</li>
                         ))}
                     </ul>
+
+                    <button onClick={handleClick}>Likes ({likes})</button>
                 </div>
             );
         }
